# axer

./: .env_example  Cargo.toml  README.md
migrations/: 20250302100744_wasm_modules.sql
src/: main.rs  test_utils.rs  twasm.rs  utils.rs
src/database/: axerdb.rs  mod.rs
src/dtos/: mod.rs
src/routes/: index.rs  mod.rs
src/routes/wasm/: register.rs
src/storage/: mod.rs
wasm/: 11.wasm  12.wasm  13.wasm  14.wasm  15.wasm  16.wasm  3.wasm
