[package]
name = "axer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.9.0"
rusqlite = "0.33.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wasmtime = { version = "30.0.2", features = ["runtime", "async"] }
