[package]
name = "axer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sqlx = { version = "0.8.3", default-features = false, features = ["derive", "runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = { version = "1.2.0", features = ["serde"] }
wasmtime = { version = "30.0.2", features = ["runtime", "async"] }
